# Earnings-Call-Summarizer

./: .env.example  .gitignore  README.md  main.py  requirements.txt
.cursor/: agents.yaml  angelo-manifest.json  hooks.json  mcp.json
.memory/: config.yaml  project.md
Structured Narrative/: README.md  Rough Presentation Script.md  Rough Presentation.md  Script.py  _run_historical_backfill.py  _run_nvda_after_backfill.py  asof_alpha.py  batch_scoring.py  build_comparison.py  build_consolidated_panel_report.py  build_delta_report.py  build_dimension_report.py  build_feature_panel.py  build_surprise_report.py  company_config.py  composite_signal.py  consensus_context.py  coverage.py  delta_reference_key.txt  (+49 more)
earnings-scraper-main/earnings-scraper-main/: .env.example  .gitignore  README.md  projects.yaml  pyproject.toml
earnings-scraper-main/earnings-scraper-main/.cursor/: agents.yaml  extraction-schemas.yaml  hooks.json  mcp.json
earnings-scraper-main/earnings-scraper-main/.cursor/rules/: coordinator.mdc  earnings-ingest.mdc  grounded-extraction.mdc  memory.mdc  operations.mdc  stream.mdc
earnings-scraper-main/earnings-scraper-main/.cursor/skills-cursor/close-branch/: SKILL.md
earnings-scraper-main/earnings-scraper-main/inbox/: .gitkeep
earnings-scraper-main/earnings-scraper-main/scripts/: env_setup.sh  fetch_transcripts.py  pull_to_inbox.py  run_extraction.py  run_overnight.sh  stage_inbox.py  universe_overnight.txt
earnings-scraper-main/earnings-scraper-main/src/earnings_scraper/: __init__.py  config.py  edgar_fallback.py  roic_client.py  snowflake_io.py
(+176 files in other folders)
